public/style.css
/* ... */
/*@media (max-width: 800px){
  .third_body .project_title{
    padding-left: 10%;
  }
}*/

.project_title{
 padding: 0 0 1% 0;
}


/*horizontal scroll*/
/*// This container element gives us the scrollbars we want.*/
div.horizontal {
    width: 100%;
    height: 400px;
    overflow: auto;
}

/*// table-layout: fixed does a lot of the magic, here. It makes sure that the "table cells" retain the pixel dimensions you want.*/
.table {
    display: table;
    table-layout: fixed;
    width: 100%;
}

/*// Arranging your content inside the "cells" is as simple as using the vertical-align and text-align properties. Floats work, too.*/
article {
    width: 400px;
    height: 400px;
    display: table-cell;
    background: #B4E5F3;
    vertical-align: middle;
    text-align: center;
}

/*// Some styling for contrast.*/
article:nth-child(2n+2)
{
    background: #273041;
}
/*end of horizontal project scroll*/
.third_body .table img{
  height: 28vh;
  width: auto;
  padding: 0 0 0 3%;
}
/*fourth body*/

.fourth_body{
  background-color: #FB5445;
  height: 100vh;
  width: 100%;
}
/*@media (max-width:480px){
  .fourth_body {
    margin-top: 2%;
    height: 100vh;
  }
}*/
.fourth_body .col-md-offset-8{
  padding-top: 2%;
}
.fourth_body h1 img{
  height: 23vh;
  width: auto;
}
.fourth_body h1{
  font-family: 'Baloo Bhaina', cursive;
  color: #FEE818;
}
.fourth_body h2{
  color: #273041;blue
  font-family: 'Baloo Bhaina', cursive;
}
.fourth_body p{
  font-family: 'Bitter', serif;
}
.fourth_body h4{
  font-family: 'Bitter', serif;
}
.college{
  height: auto;
  padding: 0 0 0 5%;
}
.college2{
  /*border: 1px solid black;*/
  height: auto;
  margin-top: 5%;
  padding: 0 0 0 5%;
}
.college3{
  height: auto;
  margin-top: 10%;
  padding: 0 2.3% 0 5%;
}
.clickable_icons .college3 a h2{
  margin: 0 2% 2% 0;
  transition: all .2s ease-in-out;
}

.clickable_icons .college3 a h2:hover{
  transform: scale(1.1);
  font-weight: bolder;
}

/*fifth body*/

.fifth_body{
  background-color: #516790;
  height: 120vh;
  width: 100%;
}
.fifth_body h1{
  font-family: 'Baloo Bhaina', cursive;
  color: #FEE818;
}
.fifth_body .project_title img{
  height: 18vh;
  width: auto;
  padding: 0 0 0 3%;
}
.fifth_body .col-md-offset-1{
  padding: 1% 0 0 0;
}

/*@media (max-width:1230px){
  .skills-box {
    margin: 0;
  }
  .fifth_body .col-md-offset-1{
    padding: 0 0 0 0;
  }
   .fifth_body{
     height: 100vh;
     width: 100%;
     padding: 0 0 5% 2%;
   }
   .fifth_body .project_title{
     padding-left: 10%;
   }
}*/
/*progress bar start*/
p{
  color:#525252;
  font-size:12px;
}

.skillbar {
	position:relative;
	display:block;
	margin-bottom:1%;
	width:77%;
	background:#eee;
	height:35px;
	border-radius:3px;
	-moz-border-radius:3px;
	-webkit-border-radius:3px;
	-webkit-transition:0.4s linear;
	-moz-transition:0.4s linear;
	-ms-transition:0.4s linear;
	-o-transition:0.4s linear;
	transition:0.4s linear;
	-webkit-transition-property:width, background-color;
	-moz-transition-property:width, background-color;
	-ms-transition-property:width, background-color;
	-o-transition-property:width, background-color;
	transition-property:width, background-color;
}

.skillbar-title {
	position:absolute;
	top:0;
	left:0;
width:110px;
	font-weight:bold;
	font-size:13px;
	color:#ffffff;
	background:#6adcfa;
	-webkit-border-top-left-radius:3px;
	-webkit-border-bottom-left-radius:4px;
	-moz-border-radius-topleft:3px;
	-moz-border-radius-bottomleft:3px;
	border-top-left-radius:3px;
	border-bottom-left-radius:3px;
}

.skillbar-title span {
	display:block;
	background:rgba(0, 0, 0, 0.1);
	padding:0 20px;
	height:35px;
	line-height:35px;
	-webkit-border-top-left-radius:3px;
	-webkit-border-bottom-left-radius:3px;
	-moz-border-radius-topleft:3px;
	-moz-border-radius-bottomleft:3px;
	border-top-left-radius:3px;
	border-bottom-left-radius:3px;
}

.skillbar-bar {
	height:35px;
	width:0px;
	background:#6adcfa;
	border-radius:3px;
	-moz-border-radius:3px;
	-webkit-border-radius:3px;
}

.skill-bar-percent {
	position:absolute;
	right:10px;
	top:0;
	font-size:11px;
	height:35px;
	line-height:35px;
	color:#ffffff;
	color:rgba(0, 0, 0, 0.4);
}
/*progress bar end*/

/*sixth body*/

.sixth_body{
  background-color: #FEE817;
  height: 100vh;
  width: 100%;
}
.sixth_body #down{
 float: right;
 margin: 0 16% 0 0;
 padding-top: 5%;
}
.sixth_body h1{
  font-family: 'Baloo Bhaina', cursive;
  color: #273041;
}

.sixth_body #down2{
  float: left;
  margin: 0 0 0 16%;
  padding-top: 5%;
}
.sixth_body img{
  height: 10vh;
  width: auto;
}
.sixth_body p{
  font-family: 'Bitter', serif;
  color: black;
  font-size: 1em;
}
.sixth_body h3{
  font-family: 'Baloo Bhaina', cursive;
  color: black;
}
/*@media (max-width:800px){
   .sixth_body{
     height: 145vh;
     width: 100%;
   }

}*/

/*seventh body*/

.seventh_body{
  background-color: #236B8E;
  height: 100vh;
  width: 100%;
}
.seventh_body article{
  background-color: #EEEAC0;
}
.seventh_body article:nth-child(2n+2)
{
    background: #FEE818;
}
.seventh_body article h3{
  color: #002244;
  font-family: 'Baloo Bhaina', cursive;
}
.seventh_body article h4{
  color: #002244;
  font-family: 'Baloo Bhaina', cursive;
}
.seventh_body img{
  height: 18vh;
  width: auto;
  padding: 0 0 1% 0;
}

.img-circle{
  height: 20vh;
  width: auto;
  border-radius: 50%;
}
/*@media (max-width:480px){
  .seventh_body{
    height: 100vh;
    width: 100%;
  }
  .seventh_body .project_title{
    padding-left: 10%;
  }
}*/

#prof-font{
  color: #292929;
  text-align: justify;
  font-family: 'Bitter', serif;
  padding: 0 5% 0 5%;
}
.clickable_icons .contact-btn{
  margin: 0 2% 2% 0;
  transition: all .2s ease-in-out;
}

.clickable_icons .contact-btn:hover{
  transform: scale(1.1);
  background-color: #236B8E;
  color: white;
  border: 1px solid white;
}
.contact-btn{
  background-color:#FEE818;
  font-family: 'Baloo Bhaina', cursive;
  color: #002244;
}

/*media queries for mobile*/

/*[class*="col-"] {
    width: 100%;
}
/* ... */

